# moveit

./: CMakeLists.txt  package.xml
src/: moncube.cpp  pick_place_demo.cpp
